added header. styling improvement, about page sketch.

--- a/GPCAppWeb/src/app/games/games-list/game-item/game-item.component.css
+++ b/GPCAppWeb/src/app/games/games-list/game-item/game-item.component.css
@@ -71,3 +71,16 @@
     background-color: darkgreen;
     border-color: darkgreen;
 } */
+.steamItem {
+    background-color: #1b2838;
+}
+.steamItem div.gameTitle, .steamItem div.gamePrice {
+    color: #C6D4DF;
+}
+
+.gogItem {
+    background-color: #d8d8d8;
+}
+.gogItem div.gameTitle, .gogItem div.gamePrice {
+    color: #1a1a1a;
+}
