--- a/GPCAppWeb/src/app/app.component.html
+++ b/GPCAppWeb/src/app/app.component.html
@@ -1,5 +1,4 @@
-<h2>Game Comparator</h2>
-
+<app-header></app-header>
 <div class="container" style="padding: 0% 0% 0% 0%; margin: 0% 0% 0% 5%;">
   <div class="row" style="border: 1px solid yellow; width:100%">
     <div class="col-sm-12" style="border: 1px solid green; width: 100%">
