styling improvement. Added spinners. Added dynamic class base on price of compared games (first row).

--- a/GPCAppWeb/src/app/games/games-list/games-list.component.css
+++ b/GPCAppWeb/src/app/games/games-list/games-list.component.css
@@ -45,3 +45,11 @@
 .steam {
     background-color: #1b2838;
 }
+
+.toCompare {
+    text-decoration: underline;
+}
+.lowerPrice {
+    text-decoration: underline;
+    color:green;
+}
