--- a/GPCAppWeb/src/app/games/games-list/game-item/game-item.component.css
+++ b/GPCAppWeb/src/app/games/games-list/game-item/game-item.component.css
@@ -17,20 +17,23 @@
     height: 120px;  */
     padding: 0 0 0 0;
     border: 1px solid orange;
+    margin: 10px 0px 10px 0px;
+    /* max-width: 480px; */
 }
 
 .gameTitle {
     width:100%;
-    
+    min-height: 56px;
     text-align: left;
-    font-size: 12px;
+    font-size: 18px;
+    font-weight: 400;
     overflow-wrap: break-word;
-
-    border: 1px solid black
+    border: 1px solid black;
+    margin: 5px 0px 0px 5px;
 }
 .gameImage {
-    width: 256px;
-    height: 120px;
+    max-width: 460px;
+    max-height: 205px;
     border: 1px solid black;
 }
 .gameImage img {
@@ -41,6 +44,8 @@
 .gamePrice {
     border: 1px solid black;
     width:100%;
+    font-size: 18px;
+    font-weight: 400;
 }
 .grid {
     display: block;
@@ -58,14 +63,19 @@
 
 
 .row {
-    margin: 0px 0px 0px 0px;
+    margin: 5px 0px 0px 5px;
 }
 .col {
+    padding: 0px 0px 0px 0px;
+}
+.container {
     padding: 0px 0px 0px 0px;
 }
 
 .gameMenu {
     text-align-last: end;
+    width:100%;
+    height: 100%;
 }
 /* .gameMenu .btn-success {
     background-color: darkgreen;
