--- a/GPCAppWeb/src/app/header/header.component.html
+++ b/GPCAppWeb/src/app/header/header.component.html
@@ -8,7 +8,9 @@
         </div>
 
         <ul class="navbar-nav mr-auto">
+            <span>|</span>
             <li routerLinkActive="active" class="nav-item"><a routerLink="/gamesList">Compare games</a></li>
+            <span>|</span>
             <li routerLinkActive="active" class="nav-item"><a routerLink="/about">About</a></li>
         </ul>
         
