fixed getting games id list from steam (two sources of games are now checked). Added test styling for first elements in displayed row which prices are lower.

--- a/GPCAppWeb/src/app/games/games-list/game-item/game-item.component.css
+++ b/GPCAppWeb/src/app/games/games-list/game-item/game-item.component.css
@@ -88,9 +88,16 @@
     color: #C6D4DF;
 }
 
+
+
 .gogItem {
     background-color: #d8d8d8;
 }
 .gogItem div.gameTitle, .gogItem div.gamePrice {
     color: #1a1a1a;
+}
+
+.lowerPrice .gameInfo div{
+    color:  #007e28;
+    font-weight: bold;
 }
