cleaning code in API. Added functionality to save games ids from Steam to DB (Azure SQL Server) and retrieve data from there if steam APIs do not respond. Changes in Web corresponding with changes in API (f.e. only one http request instead of two requests to two different SteamApis how it was previously - logic detecting which one to use is in API).

--- a/GPCAppWeb/src/app/games/games-list/game-item/game-item.component.html
+++ b/GPCAppWeb/src/app/games/games-list/game-item/game-item.component.html
@@ -10,7 +10,7 @@
                     <img [src]="game.imagePath" alt="{{ game.title }}" class="img-responsive">
                 </div>
                 <div class="gameInfo">
-                    <div class="gameTitle" (click)="onCompare()">
+                    <div class="gameTitle" (click)="onGoToStorePage()">
                         {{ game.title }}
                     </div>
                     <div class="container">
