minor nam fixes in API. Fixed header. Minor styling fixes.

--- a/GPCAppWeb/src/app/app.component.html
+++ b/GPCAppWeb/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="container" style="padding: 0% 0% 0% 0%;  max-width:920px">
-  <div class="row" style="border: 1px solid yellow; width:100%">
+  <div class="row" style="border: 1px solid yellow; width:100%; margin: 0px 0px 0px 0px">
     <div class="col-sm-12" style="border: 1px solid green; width: 100%">
       <router-outlet></router-outlet>
     </div>
