--- a/GPCAppWeb/src/app/header/header.component.html
+++ b/GPCAppWeb/src/app/header/header.component.html
@@ -1,20 +1,20 @@
-<nav class="navbar navbar-expand-md myHeader">
-    <div class="container-fluid ">
-        <div>
-            <!--button type="button" class="navbar-toggle" (click)="collapsed = !collapsed">
-                <span class="icon-bar" *ngFor="let iconBar of [1,2,3]"></span>
-            </button-->
-            <a class="navbar-brand" style="cursor: pointer;">Game Price Comparison</a>
-        </div>
 
-        <ul class="navbar-nav mr-auto">
-            <span>|</span>
-            <li routerLinkActive="active" class="nav-item"><a routerLink="/gamesList">Compare games</a></li>
-            <span>|</span>
-            <li routerLinkActive="active" class="nav-item"><a routerLink="/about">About</a></li>
-        </ul>
-        
+<nav class="navbar navbar-expand-md myHeader">
+  <div class="container-fluid ">
+    <button class="navbar-toggle"  type="button"  (click)="collapsed = !collapsed">
+      <span class="icon-bar" *ngFor="let iconBar of [1,2,3]"></span>
+    </button>
+    <a class="navbar-brand" style="cursor: pointer;">Game Price Comparison</a>
+    <div class="dropdown-divider"><hr></div>
+    <div class="collapse navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
+      <ul class="navbar-nav mr-auto">
+          <span *ngIf="collapsed">|</span>
+          <li routerLinkActive="active" class="nav-item"><a routerLink="/gamesList">Compare games</a></li>
+          <span *ngIf="collapsed">|</span>
+          <li routerLinkActive="active" class="nav-item"><a routerLink="/about">About</a></li>
+      </ul>
     </div>
+  </div>
 </nav>
 
 <!-- <nav class="navbar-expand-md">
